--- a/TechnicalTestMVVM/Podfile
+++ b/TechnicalTestMVVM/Podfile
@@ -7,6 +7,7 @@ target 'TechnicalTestMVVM' do
 
   # Pods for TechnicalTestMVVM
   pod 'Alamofire' , '5.6.4'
+  pod 'AlamofireImage', '~> 4.1'
 
   target 'TechnicalTestMVVMTests' do
     inherit! :search_paths
